Fix line breaks in scrollable content

--- a/src/style.css
+++ b/src/style.css
@@ -300,8 +300,7 @@
     height: 5rem;
     text-align: left;
     min-width: 355px;
-    word-break: break-word;
-    white-space: normal;
+    white-space-collapse: break-spaces;
     overflow-x: hidden;
     overflow-y: auto;
     padding: .3rem .5rem;
